<resources>
    <string name="app_name">Smart Metering</string>
    <string name="action_settings">Settings</string>
    <string name="action_measurements">Measurements (develpoment)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="measurements">Current Measurements</string>
    <string name="mobile_measurements">Mobile Measurement</string>
    <string name="carrier_field">Carrier:</string>
    <string name="signal_level_field">Signal(level):</string>
    <string name="signal_dbm_field">Signal(dBm):</string>
    <string name="latitude_field">Latitude:</string>
    <string name="longitude_field">Longitude:</string>
    <string name="battery_field">Baterry %:</string>
    <string name="battery_state_field">State:</string>
</resources>
