<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <include
        layout="@layout/include_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mobile_measurements"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="80dp"
        android:text="@string/mobile_measurements"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/carrier_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="130dp"
        android:text="Carrier:"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/carrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="130dp"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/signal_level_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="150dp"
        android:text="@string/signal_level_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signal_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/signal_dbm_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="150dp"
        android:text="@string/signal_dbm_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signal_dbm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="150dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/latitude_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="170dp"
        android:text="@string/latitude_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="170dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/longitude_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="170dp"
        android:text="@string/longitude_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="170dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/battery_per_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="190dp"
        android:text="@string/battery_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/baterry_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="190dp"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/battery_state_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="185dp"
        android:layout_marginTop="190dp"
        android:text="@string/battery_state_field"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/baterry_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="190dp"
        android:textSize="15dp"/>


</FrameLayout>